# neu2025systemdesign

./: .gitignore  CMakeLists.txt  README.md  filesystem.cpp  filesystem_api.cpp  filesystem_directory.cpp  filesystem_file.cpp  filesystem_system.cpp  filesystem_user.cpp  main.cpp  qt_main.cpp  qt_mainwindow.cpp  qt_mainwindow.h  resources.qrc  utils.cpp  vfs.h  virtual_disk.cpp
